samples/_failures_safe/1761181386_985f83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afc08129.c: In function ‘main’:
./samples/SAFE/__tmp_afc08129.c:138:34: error: expected ‘;’ at end of input
  138 |         for (int j = 0; j < cols2
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_afc08129.c:138:9: error: expected declaration or statement at end of input
  138 |         for (int j = 0; j < cols2
      |         ^~~
./samples/SAFE/__tmp_afc08129.c:138:9: error: expected declaration or statement at end of input
